# Learn-UnityCPP

./: .gitignore  README.md
PInvoke/: .gitignore  CMakeLists.txt  library.cpp  library.h
PInvoke/UnityProject/TestDll/: .gitignore  Assembly-CSharp-Editor-firstpass.csproj  Assembly-CSharp.csproj  TestDll.sln
PInvoke/UnityProject/TestDll/Assets/: TestDll.cs  TestScene.unity
PInvoke/UnityProject/TestDll/Assets/Plugins/TestDll.bundle/Contents/: Info.plist
PInvoke/UnityProject/TestDll/Assets/Plugins/TestDll.bundle/Contents/MacOS/: TestDll
PInvoke/UnityProject/TestDll/ProjectSettings/: ProjectSettings.asset
SwigLib/src/: CMakeLists.txt
SwigLib/src/swig/: swiglib.i  swiglib_wrap.cxx
SwigLib/src/test/: FooObject.cpp  FooObject.h  Test.cpp  Test.h
UnityProj/UnityCppLearn/Assets/Scenes/: HelloSwig.unity  SwigUsage.unity
UnityProj/UnityCppLearn/Assets/Scripts/HelloSwig/: HelloSwig.cs
UnityProj/UnityCppLearn/Assets/Scripts/SwigUsage/: SwigUsage.cs
UnityProj/UnityCppLearn/Assets/SwigTools/Interface/: BoolPointer.cs  BoolVector.cs  FooObject.cs  Fooector.cs  IntArray.cs  SWIGTYPE_p_unsigned_char.cs  TestSwig.cs  UnsignedCharArray.cs  swiglib.cs  swiglibPINVOKE.cs
UnityProj/UnityCppLearn/ProjectSettings/: ProjectSettings.asset
