cmake_minimum_required(VERSION 3.8)
project(TestDll)

SET(CMAKE_CXX_STANDARD 11)

#SET(CMAKE_C_COMPILER clang)
#SET(CMAKE_CXX_COMPILER clang++)
## 最低支持的 iOS 版本
#SET(CMAKE_XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "8.1")
#SET(CMAKE_OSX_SYSROOT iphoneos11.1)


SET(SOURCE_FILES library.cpp library.h)
ADD_LIBRARY(TestDll MODULE ${SOURCE_FILES})
SET_TARGET_PROPERTIES(TestDll PROPERTIES BUNDLE TRUE)
